feat: added basic layout

--- a/src/style/Components/_section.scss
+++ b/src/style/Components/_section.scss
@@ -1,4 +1,16 @@
 .section {
     position: relative;
     width: 100%;
+
+    &.-home {
+        margin-top: 20px;
+
+        .s-col {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            
+        }
+    }
 }
