--- a/src/style/Components/_header.scss
+++ b/src/style/Components/_header.scss
@@ -1,5 +1,7 @@
 .header {
+    height: 100px;
     width: 100%;
     padding: 20px 0px;
+    z-index: 20;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
