--- a/src/style/Components/_section.scss
+++ b/src/style/Components/_section.scss
@@ -1,4 +1,5 @@
 .section {
+    z-index: 0;
     position: relative;
     width: 100%;
 
@@ -9,8 +10,12 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-
-            
         }
+    }
+
+    &.-dashboard {
+        min-height: calc(100vh - 160px);
+        padding-top: 50px;
+        background-color: $color13;
     }
 }
