--- a/src/style/Config/_colors.scss
+++ b/src/style/Config/_colors.scss
@@ -5,4 +5,7 @@ $color17: #8A8A8A;
 $color20: #000000;
 
 $color25: #5599FF;
+$color26: #05A8D5;
 $color30: #F68181;
+$color35: #FF9D22;
+$color36: #FFD5A0;
