--- a/src/style/Components/_section.scss
+++ b/src/style/Components/_section.scss
@@ -31,5 +31,9 @@
             padding: 20px;
             background-color: $color13;
         }
+
+        .s-col {
+            padding-bottom: 100px;
+        }
     }
 }
