--- a/src/style/Components/_sendzone.scss
+++ b/src/style/Components/_sendzone.scss
@@ -16,6 +16,17 @@
             font-weight: 600;
             margin-bottom: 0px;
         }
+
+        .s-input {
+            width: 100%!important;
+            height: 250px;
+            border: none;
+            border-radius: 4px;
+            
+            &:focus {
+                outline: none;
+            }
+        }
     }
 
     a {
