--- a/src/style/Components/_card.scss
+++ b/src/style/Components/_card.scss
@@ -5,6 +5,7 @@
         margin-bottom: 40px;
         cursor: pointer;
         border: none!important;
+        color: $color20!important;
         border-radius: 4px;
         padding: 20px 40px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.20);
