feat: added results

--- a/src/style/Components/_results.scss
+++ b/src/style/Components/_results.scss
@@ -5,7 +5,7 @@
 
     .r-list {
         list-style-type: none;
-        padding: none;
+        padding-left: none;
 
         .r-info {
             font-weight: bold;
